# IX-CognitionKernel

./: .gitignore  COMMERCIAL.md  LICENSE  NOTICE.md  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
docs/: wave7_cognitive_organism_substrate.md
src/ix_cognition_kernel/: __init__.py  agents.py  causal.py  cognitive_bom.py  cycle.py  doctrine.py  engines.py  evaluation.py  history.py  learning.py  memory.py  observations.py  outcome.py  planning.py  prediction.py  prototype.py  purpose.py  revision.py  skills.py  state.py  (+132 more)
tests/: test_agents.py  test_belief_history.py  test_belief_state.py  test_belief_updates.py  test_causal_model.py  test_causal_predictions.py  test_causal_revisions.py  test_cognitive_bom.py  test_contradiction_detection.py  test_doctrine.py  test_engines.py  test_evaluation_records.py  test_learning_cycle.py  test_learning_ledger.py  test_memory_quarantine.py  test_outcome_learning.py  test_package_identity.py  test_plan_graph.py  test_purpose_checks.py  test_research_prototype_snapshot.py  test_skill_validation.py  test_staleness_supersession.py  test_state.py  test_wave2_failure_scenarios.py  test_wave2_readiness.py  test_wave3_adversarial.py  test_wave3_agent_artifacts.py  test_wave3_assurance.py  test_wave3_blackfox_handoff.py  test_wave3_contracts.py  test_wave3_coordinator.py  test_wave3_curriculum.py  test_wave3_discovery.py  test_wave3_engine_coordination.py  test_wave3_memory_integration.py  test_wave3_readiness.py  test_wave3_reward_audit.py  test_wave3_skill_governance.py  test_wave3_substrate.py  test_wave3_tribunal.py  (+115 more)
