[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ix-cognition-kernel"
version = "0.3.0"
description = "Wave 3 governed AGI-emulation substrate for IX-CognitionKernel, a source-available governed causal cognition kernel research project."
authors = [{ name = "Bryce Lovell" }]
requires-python = ">=3.11"
license = { text = "Source-available evaluation license" }
keywords = [
  "agi-research",
  "agentic-ai",
  "ai-governance",
  "ai-safety",
  "causal-cognition",
  "human-in-the-loop",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers", "-ra"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
pretty = true
show_error_codes = true
warn_unreachable = true
